# phd

./: .gitignore  README.md
castanea/calibration/: calibration_output.odg  diag.R  main.R
castanea/functions/: auc.R  cmaes_calibration.R  cmaes_mod.R  create_commandfiles.R  create_inventoryfile.R  create_runfile.R  create_speciesfile.R  diag_cliamte.R  diag_climate.R  load_parameter_values.R  modify_speciesfile.R  read_auc.R  read_mean_outputvalue.R  read_mean_outputvalue_2.R  run_model.R
castanea/inv/: picea_abies_30yr_tgcc.rds
correlative_models/: main.R
global_sensitivity_analysis/: sens.R
hindcasting/climate_data/daily_weather_generator/gwgen_parallel-master/src/: Makefile.am  errormod.f90  geohashmod.f90  getdatamod.f90  outputmod.f90  weathergenmod.f90
manuscript/: index.tex  index.toc
migration/: fagus_migration.odp  phenofit_beech_first_results.odp  plot_migration.R
notebook/: .~lock.recent past.odt#  BES_abstract.docx  BES_abstract_shortversion.docx  NFI_collaboration.docx  castanea_from_R.odg  distribution_modelling.odg  dormann.odg  formatting_data.odg  insights_first_collection.odt  inverse_modelling.odg  levins_triangle.odg  paleo_radiation.odg  paleoclimate.odg  paleoclimate_processing.odg  paleosim_strategy.odg  past_timeline.odp  phenofit.odg  phenofit_from_R.odg  pollen.odg  presentation_metrics.odp  prevalence.odt  project_framework.odg  project_timetable.odg  recent past.odt  sample_reduction.odg  sdm_and_predictors.odg  task_list.md
phenofit/: partial_calibration.ods
recent_past/: recent_past.odt
slideshow/: template.odp
(+15362 files in other folders)
