bin_PROGRAMS = gwgen
gwgen_SOURCES =      \
  parametersmod.f90  \
  errormod.f90       \
  coordsmod.f90      \
  geohashmod.f90     \
  statsmod.f90       \
  randomdistmod.f90  \
	utilitiesmod.f90	 \
	newsplinemod.f90 	 \
  weathergenmod.f90  \
  getdatamod.f90     \
  outputmod.f90      \
  gwgenmod.f90			 \
	main.f90
clean-local:
	rm -r -f *.mod *.dSYM
